// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENTS/CustomerInfo DefaultValues smoke-test 1`] = `
<div style="max-width: 295px;">
  <div class="customer-info">
    <div class="customer-info__navigation">
      Ihre Angaben
    </div>
    <p>
      Arthur Zakharov
    </p>
    <p>
      Geb in 12/12/2000
    </p>
    <p>
      Marienstr. 7, 01067 Dresden
    </p>
  </div>
</div>
`;

exports[`COMPONENTS/CustomerInfo EditButtonHidden smoke-test 1`] = `
<div style="max-width: 295px;">
  <div class="customer-info">
    <div class="customer-info__navigation">
      Ihre Angaben
    </div>
    <p>
      Arthur Zakharov
    </p>
    <p>
      Geb in 12/12/2000
    </p>
    <p>
      Marienstr. 7, 01067 Dresden
    </p>
  </div>
</div>
`;

exports[`COMPONENTS/CustomerInfo EditButtonVisible play-test 1`] = `
<div style="max-width: 295px;">
  <div class="customer-info">
    <div class="customer-info__navigation">
      Ihre Angaben
      <button type="button"
              tabindex="0"
              class="customer-info__button"
      >
        <span>
          ändern
        </span>
        <svg focusable="false"
             role="img"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 512 512"
        >
          <path opacity="0.4"
                fill="currentColor"
                d="M498 142.08l-56.6 56.55-128-128 56.55-56.55a48 48 0 0 1 67.91 0L498 74.17a48 48 0 0 1 0 67.91z"
          >
          </path>
          <path fill="currentColor"
                d="M12.85 371.11L.15 485.33a24 24 0 0 0 26.49 26.51l114.14-12.6 278-278-128-128z"
          >
          </path>
        </svg>
      </button>
    </div>
    <p>
      Arthur Zakharov
    </p>
    <p>
      Geb in 12/12/2000
    </p>
    <p>
      Marienstr. 7, 01067 Dresden
    </p>
  </div>
</div>
`;

exports[`COMPONENTS/CustomerInfo EmptyList smoke-test 1`] = `
<div style="max-width: 295px;">
  <div class="customer-info">
    <div class="customer-info__navigation">
      Ihre Angaben
    </div>
  </div>
</div>
`;

exports[`COMPONENTS/CustomerInfo VersionForm smoke-test 1`] = `
<div style="max-width: 295px;">
  <div class="customer-info">
    <div class="customer-info__navigation">
      Ihre Angaben
    </div>
    <p>
      Arthur Zakharov
    </p>
    <p>
      Geb in 12/12/2000
    </p>
    <p>
      Marienstr. 7, 01067 Dresden
    </p>
  </div>
</div>
`;

exports[`COMPONENTS/CustomerInfo VersionSidebar smoke-test 1`] = `
<div style="max-width: 295px;">
  <div class="customer-info customer-info--sidebar">
    <div class="customer-info__navigation">
      Ihre Angaben
    </div>
    <p>
      Arthur Zakharov
    </p>
    <p>
      Geb in 12/12/2000
    </p>
    <p>
      Marienstr. 7, 01067 Dresden
    </p>
  </div>
</div>
`;
